<resources>
    <string name="app_name">University of Kabianga</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- STRINGS ABOUT THE SIDE_VAV_BAR-->
    <string name="nav_timetable">TIME TABLE</string>
    <string name="nav_help">HELP AND SUPPORT</string>
    <string name="nav_reset">Reset Your Password</string>



    <!-- Strings related to login -->
    <string name="prompt_email"> Student Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="checkbox_remember">Remember me</string>

    <!-- About the version and the developer of the application-->
    <string name="app_version">Software version 0.97</string>
    <string name="app_platform">Platform : Android</string>
    <string name="app_network">Network : Online</string>
    <string name="app_serverVersion">Server version : 0.97</string>
    <string name="app_time">Time: 14-10-2015</string>
    <string name="app_timeZone">Time Zone : GMT(+3.00 Nairobi)</string>

    <string name="about_developer">Dennis Korir Computer science Major at University of Kabianga. Feel freel to visit his site at www.geekclash.com</string>
    <string name="app_license">The MIT License (MIT)
Copyright (c) 2015 Dennis Korir
Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:
The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.
THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
</string>
    <string name="title_activity_about__author">About</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_social_media">Social Media</string>
    <string name="title_activity_splash">University of Kabianga</string>
    <string name="title_activity_cumpus_news">Campus News</string>
    <string name="section_format">If this code works it was written by Dennis if not then i do not know: %1$d</string>
    <string name="title_activity_campus_news">Campus News</string>
    <string name="title_activity_license">LicenseActivity</string>
    <string name="title_activity_web_">Official Website</string>
    <string name="title_activity_chart">chart</string>
    <string name="title_activity_faceboo">UOK Official Facebook page</string>
    <string name="title_activity_twitter">Official UOk Twitter Handale</string>
    <string name="title_activity_gplus">Uok official Google+ page</string>
    <string name="title_activity_youtube">Uok Youtube Channel</string>
    <string name="title_activity_instagram2">Instagram</string>
    <string name="title_activity_uokfeeds">Uok Feeds</string>
    <string name="title_activity_christian">Student Portal</string>
    <string name="title_activity_contacts">Contacts</string>
</resources>
